--- a/info.yaml
+++ b/info.yaml
@@ -18,6 +18,7 @@ project:
   # Don't forget to also update `PROJECT_SOURCES` in test/Makefile.
   source_files:
     - "project.v"
+    - "palette.v"
     - "id_rom.v"
     - "hvsync_generator.v"
 
